tests/ui/rfcs/rfc-2294-if-let-guard/exhaustive.stderr
error[E0004]: non-exhaustive patterns: `None` not covered
  --> $DIR/exhaustive.rs:5:11
   |
LL |     match x {
   |           ^ pattern `None` not covered
   |
note: `Option<u32>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
  ::: $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `Option<u32>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         None if let y = x => {},
LL +         None => todo!()
   |

error[E0004]: non-exhaustive patterns: `()` not covered
  --> $DIR/exhaustive.rs:14:11
   |
LL |     match x {
   |           ^ pattern `()` not covered
   |
   = note: the matched value is of type `()`
   = note: match arms with guards don't count towards exhaustivity
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         y if let z = y => {},
LL +         () => todo!()
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
